[metadata]
name = mistconnection
version = 0.0.1
author = Mist Fog
author_email = author@thinnect.com
description = Communications library for talking Mist packets through AMQP.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thinnect/python-mistconnection
project_urls =
    Bug Tracker = https://github.com/thinnect/python-mistconnection/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    protobuf >= '3.17.3'
    pika >= '1.2.0'

[options.packages.find]
where = src
